// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PriceInDollars renders the price 1`] = `
<div>
  <span
    class="font-semibold"
  >
    $
    100
  </span>
</div>
`;

exports[`PriceInDollars renders the price and percent off 1`] = `
<div>
  <span
    class="mr-1 line-through"
  >
    $
    100
  </span>
  <span
    class="font-semibold"
  >
    $
    80
  </span>
</div>
`;
